fixed stuff on the paginator, created book card component

--- a/angular/src/app/common/components/book-card/book-card.component.html
+++ b/angular/src/app/common/components/book-card/book-card.component.html
@@ -1,4 +1,4 @@
-<mat-card>
+<mat-card (click)="goToBookDetails()">
     <mat-card-title> {{book.title}} </mat-card-title>
     <mat-card-subtitle> {{book.author}} </mat-card-subtitle>
     
