--- a/angular/src/app/common/components/paginator/paginator.component.scss
+++ b/angular/src/app/common/components/paginator/paginator.component.scss
@@ -15,3 +15,22 @@ mat-card{
     align-items:flex-start;
     justify-content: center;
 }
+
+.rightbutton{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    flex-direction: row-reverse;
+    mat-icon{
+        margin: 0 !important;
+    }
+}
+
+mat-card{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    margin: 0 10%;
+}
