--- a/angular/src/app/common/components/book-card/book-card.component.scss
+++ b/angular/src/app/common/components/book-card/book-card.component.scss
@@ -6,6 +6,7 @@ mat-card{
     padding: 30px;
     width: 320px;
     height: 600px;
+    cursor: pointer;
 
     mat-card-title{
         font-size: 1.5rem;
