--- a/angular/src/styles.scss
+++ b/angular/src/styles.scss
@@ -37,3 +37,18 @@ $GABIBBOOK-Frontend-theme: mat.define-light-theme((
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+app-root {
+  display: block;
+  height: 100%;
+}
+
+app-profilepage{
+  display: block;
+  height: 100%;
+}
+
+app-navbar{
+  display: block;
+  height: 7%;
+}
