IMPLEMENTED CARDS, fixed pagination and search, fixed guards, implemented interceptor, implemented profile

--- a/angular/src/app/common/components/book-card/book-card.component.html
+++ b/angular/src/app/common/components/book-card/book-card.component.html
@@ -5,7 +5,7 @@
         <img src="{{book.cover}}" alt="Book Image">
     
     <mat-card-footer>
-        <p>Price: {{book.price}}$</p>
+        <p>Current offer: {{book.current_offer.value}}$</p>
     </mat-card-footer>
 </mat-card>
   
