--- a/angular/src/app/modules/books/components/bookspage/bookspage.component.html
+++ b/angular/src/app/modules/books/components/bookspage/bookspage.component.html
@@ -11,6 +11,6 @@
     <app-paginator
         [currentPage]="currentPage"
         [totalPages]="totalPages"
-        (pageChange)="onPageChange($event)"
+        (pageChanged)="onPageChange($event)"
     ></app-paginator>
 </div>
