--- a/angular/src/app/common/components/paginator/paginator.component.html
+++ b/angular/src/app/common/components/paginator/paginator.component.html
@@ -10,7 +10,7 @@
             <p>Page {{currentPage}} of {{totalPages}}</p>
         </div>
         <div class="col-md-6">
-            <button class="rightbutton" mat-stroked-button (click)="onNextPage()" [disabled]="currentPage === totalPages">
+            <button class="rightbutton" mat-stroked-button (click)="onNextPage()" [disabled]="currentPage >= totalPages">
                 <p>Next</p>
                 <mat-icon>keyboard_arrow_right</mat-icon>
             </button>
