--- a/angular/src/app/modules/login/components/login/login.component.html
+++ b/angular/src/app/modules/login/components/login/login.component.html
@@ -1,20 +1,28 @@
-
 <div class="container">
   <mat-card class="login-card">
     <mat-card-header class="header">
+      <img src="assets/login-header.jpg">
       <mat-card-title>GabibBook - Login</mat-card-title>
     </mat-card-header>
     <mat-card-content class="body">
-        <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="form-group">
-            <mat-form-field>
-              <input matInput placeholder="Email" formControlName="email">
-            </mat-form-field>
-            <mat-form-field>
-              <input matInput placeholder="Password" formControlName="password">
-            </mat-form-field>
-            <button mat-raised-button color="primary" type="submit">Login</button>
-          </form>          
+      <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="form-group">
+        <mat-form-field>
+          <input matInput placeholder="Email" formControlName="email">
+        </mat-form-field>
+        <mat-form-field>
+          <input matInput placeholder="Password" formControlName="password" type="password">
+        </mat-form-field>
+        <div class="row">
+          <button mat-raised-button type="submit" class="loginButton" [disabled]="loginForm.invalid">Login</button>
+          <button mat-raised-button type="button" routerLink="/register">Register</button>
+          <button mat-raised-button type="button" routerLink="/login/forgot-password">Forgot password</button>
+        </div>
+      </form>
+      <div class="error">
+        <span *ngIf="loginForm.get('email')?.hasError('required') && loginForm.get('email')?.touched">Email is required</span>
+        <span *ngIf="loginForm.get('email')?.hasError('email') && loginForm.get('email')?.touched">Email is invalid</span>
+        <span *ngIf="loginForm.get('password')?.hasError('required') && loginForm.get('password')?.touched">Password is required</span>
+        <span *ngIf="invalidCreds">Invalid credentials</span>
+      </div>
     </mat-card-content>
   </mat-card>
-
-
