--- a/angular/src/app/modules/register/components/register/register.component.html
+++ b/angular/src/app/modules/register/components/register/register.component.html
@@ -4,36 +4,82 @@
             <mat-card-title>GabibBook - Register</mat-card-title>
         </mat-card-header>
         <mat-card-content class="body">
-            <form [formGroup]="registerForm" (ngSubmit)="onSubmit()" class="form-group">
-                <mat-form-field>
-                    <input matInput placeholder="Email" formControlName="email">
-                </mat-form-field>
-                <mat-form-field>
-                    <input matInput placeholder="Password" formControlName="password">
-                </mat-form-field>
-                <mat-form-field>
-                    <input matInput placeholder="Confirm Password" formControlName="confirmPassword">
-                </mat-form-field>
-
-                <mat-form-field>
-                    <input matInput placeholder="First Name" formControlName="firstName">
-                </mat-form-field>
-                <mat-form-field>
-                    <input matInput placeholder="Last Name" formControlName="lastName">
-                </mat-form-field>
-                <mat-form-field>
-                    <input matInput placeholder="Address" formControlName="address">
-                </mat-form-field>
-                <mat-form-field>
-                    <input matInput placeholder="City" formControlName="city">
-                </mat-form-field>
-                <mat-form-field>
-                    <input matInput placeholder="State" formControlName="state">
-                </mat-form-field>
-                <mat-form-field>
-                    <input matInput placeholder="Zip Code" formControlName="zip">
-                </mat-form-field>
-                <button mat-raised-button color="primary" type="submit">Login</button>
-            </form>
+            <mat-stepper [linear]="true" #stepper [orientation]="this.orientation">
+                <mat-step [stepControl]="firstFormGroup">
+                    <form [formGroup]="firstFormGroup">
+                        <ng-template matStepLabel>Account</ng-template>
+                        <mat-form-field>
+                            <mat-label>Nickname</mat-label>
+                            <input matInput formControlName="nickname" placeholder="Ex. GabibBook" required>
+                        </mat-form-field>
+                        <mat-form-field>
+                            <mat-label>Email</mat-label>
+                            <input matInput formControlName="email" required>
+                        </mat-form-field>
+                        <mat-form-field>
+                            <mat-label>Password</mat-label>
+                            <input matInput formControlName="password" type="password" required>
+                        </mat-form-field>
+                        <mat-form-field>
+                            <mat-label>Confirm Password</mat-label>
+                            <input matInput formControlName="confirmPassword" type="password" required>
+                        </mat-form-field>
+                        <div>
+                            <button mat-button matStepperNext>Next</button>
+                        </div>
+                    </form>
+                </mat-step>
+                <mat-step [stepControl]="secondFormGroup" label="Fill out your address">
+                    <form [formGroup]="secondFormGroup">
+                        <ng-template matStepLabel>Personal info</ng-template>
+                        <mat-form-field>
+                            <mat-label>First Name</mat-label>
+                            <input matInput formControlName="firstName" required>
+                        </mat-form-field>
+                        <mat-form-field>
+                            <mat-label>Last Name</mat-label>
+                            <input matInput formControlName="lastName" required>
+                        </mat-form-field>
+                        <mat-form-field class="full">
+                            <mat-label>Phone</mat-label>
+                            <input matInput formControlName="phone" required>
+                        </mat-form-field>
+                        <div>
+                            <button mat-button matStepperPrevious>Back</button>
+                            <button mat-button matStepperNext>Next</button>
+                        </div>
+                    </form>
+                </mat-step>
+                <mat-step>
+                    <form [formGroup]="thirdFormGroup">
+                        <ng-template matStepLabel>Address</ng-template>
+                        <mat-form-field>
+                            <mat-label>Address</mat-label>
+                            <input matInput formControlName="address" required>
+                        </mat-form-field>
+                        <mat-form-field>
+                            <mat-label>City</mat-label>
+                            <input matInput formControlName="city" required>
+                        </mat-form-field>
+                        <mat-form-field class="full">
+                            <mat-label>Nation</mat-label>
+                            <input matInput formControlName="nation" required>
+                        </mat-form-field>
+                        <div>
+                            <button mat-button matStepperPrevious>Back</button>
+                            <button mat-button matStepperNext>Next</button>
+                        </div>
+                    </form>
+                </mat-step>
+                <mat-step>
+                    <ng-template matStepLabel>Register</ng-template>
+                    <p  *ngIf="!ajaxLoading" [ngStyle]=" error ? {'color': 'red'} : {'color': 'green'}" >{{motd}}</p>
+                    <div>
+                        <app-loader color="#ff0000" position="relative" *ngIf="ajaxLoading"></app-loader>
+                        <button *ngIf="!ajaxLoading" mat-button matStepperPrevious>Back</button>
+                        <button class="regButton" *ngIf="!ajaxLoading" mat-button (click)="register()" [disabled]="!firstFormGroup.valid || !secondFormGroup.valid || !thirdFormGroup.valid">Register</button>
+                    </div>
+                </mat-step>
+            </mat-stepper>
         </mat-card-content>
     </mat-card>
