--- a/angular/src/app/modules/profile/components/profilepage/profilepage.component.html
+++ b/angular/src/app/modules/profile/components/profilepage/profilepage.component.html
@@ -1,7 +1,7 @@
 <app-navbar></app-navbar>
 <div class="container">
   <div class="menu-container">
-    <app-profile-menu></app-profile-menu>
+    <app-profile-menu isMod="this.isMod"></app-profile-menu>
   </div>
   <div class="page-container">
     <router-outlet></router-outlet>
