--- a/angular/src/app/modules/profile/components/account-auctions/account-auctions.component.html
+++ b/angular/src/app/modules/profile/components/account-auctions/account-auctions.component.html
@@ -1,1 +1,4 @@
-<p>account-auctions works!</p>
+<div class="container">
+    <p>account-auctions works!</p>
+    <p>{{ purchasesAsSeller | json }}</p>
+</div>
