--- a/angular/src/app/modules/profile/components/invite/invite.component.scss
+++ b/angular/src/app/modules/profile/components/invite/invite.component.scss
@@ -17,6 +17,7 @@
             font-size: 90px;
             width: max-content
         }
+        margin: 20px;
 
         background-color: rgb(144, 156, 235);
         color: white;
