--- a/angular/src/app/modules/profile/components/menu/menu.component.scss
+++ b/angular/src/app/modules/profile/components/menu/menu.component.scss
@@ -1,38 +1,57 @@
-h1{
+h1 {
     font-size: 400%;
     margin: 0;
 }
 
-.list-holder{
+.list-holder {
     height: 80%;
     align-items: center;
     display: flex;
     justify-content: center;
     flex-direction: column;
-    mat-nav-list{
+
+    mat-nav-list {
         margin-left: 20px;
         width: 100%;
         height: 40%;
         display: flex;
         justify-content: space-between;
         flex-direction: column;
-        mat-list-item{
+
+        mat-list-item {
             width: 100%;
             margin-bottom: 10px;
             padding: 10px;
             border-radius: 5px;
-            &:hover{
+
+            &:hover {
                 background-color: #9ca5dc;
             }
         }
+
         //intercept if the item is selected
-        .active{
+        .active {
             color: white !important;
             background-color: #909ceb;
         }
     }
 }
 
-.bottom{
+.bottom {
     height: auto;
+}
+
+@media screen and (max-width: 1100px) {
+    h1 {
+        display: none;
+    }
+
+    .menu-container {
+        margin-left: 0 !important;
+    }
+
+    mat-nav-list {
+        height: 80% !important;
+        margin-left: 0 !important;
+    }
 }
