--- a/angular/src/app/modules/profile/components/moderation/book-search/book-search.component.html
+++ b/angular/src/app/modules/profile/components/moderation/book-search/book-search.component.html
@@ -3,7 +3,7 @@
         <mat-icon matPrefix matRipple (click)="onSearchFilterPressed($event)">
             filter_list
         </mat-icon>
-        <mat-label>Search your book</mat-label>
+        <mat-label>Search book</mat-label>
         <input matInput #searchInput (keydown.enter)="onSearchButtonPressed()" value="{{this.inputData}}"/>
         <mat-icon matSuffix matRipple (click)="onSearchButtonPressed()" style="cursor: pointer;">
             search
