--- a/angular/src/app/modules/profile/components/account-personal/account-personal.component.html
+++ b/angular/src/app/modules/profile/components/account-personal/account-personal.component.html
@@ -4,7 +4,7 @@
         <h3>Personal Information</h3>
         <div class="row">
             <p class="prop">Name: </p>
-            <p class="value">{{user.name}}</p>
+            <p class="value">{{user.name}} {{user.surname}}</p>
         </div>
         <div class="row">
             <p class="prop">Email: </p>
