added first socket (priceListener), now a user can bid on an offer

--- a/angular/src/app/common/components/book-card/book-card.component.html
+++ b/angular/src/app/common/components/book-card/book-card.component.html
@@ -11,7 +11,7 @@
             }"
             /> 
     <mat-card-footer>
-        <p>Current offer: {{book.current_offer.value}}$</p>
+        <p>Current offer: {{book.offers.length === 0 ? book.start_price : book.offers[0].value}}$</p>
     </mat-card-footer>
 </mat-card>
   
