--- a/angular/src/app/modules/books/components/book-details/offer-card/offer-card.component.html
+++ b/angular/src/app/modules/books/components/book-details/offer-card/offer-card.component.html
@@ -1,1 +1,16 @@
-<p>offer-card works!</p>
+<div class="container">
+    <div class="pricing">
+        <h3>Current price:</h3>
+        <p>{{this.offer?.value }}</p>
+    </div>
+
+    <form [formGroup]="priceForm" (ngSubmit)="onSubmit()">
+        <div class="form-group">
+            <mat-form-field>
+                <mat-label>Bid: </mat-label>
+                <input matInput type="number" class="form-control" id="price" formControlName="price">
+            </mat-form-field>
+        </div>
+        <button mat-raised-button type="submit" [disabled]="priceForm.invalid">Submit</button>
+    </form>
+</div>
