implemented user stats

--- a/angular/src/app/modules/profile/components/account-orders/account-orders.component.html
+++ b/angular/src/app/modules/profile/components/account-orders/account-orders.component.html
@@ -1,7 +1,11 @@
 <div class="container">
-    <app-loader color="#909ceb" position="relative" *ngIf="ajaxLoading"></app-loader>
-    <div *ngIf="!ajaxLoading">
-        <!-- app-book-card-auctions *ngFor="let auction of data" [purchase]="auction" (statusChanged)="statusChanged($event)"></app-book-card-auctions -->
+    <mat-slide-toggle [labelPosition]='"before"' [checked]="showOffers" (change)="onToggleChange($event)">Visualizza tutte le offerte</mat-slide-toggle>
+    <app-loader color="#909ceb" position="relative" *ngIf="PurchasesLoading"></app-loader>
+    <div *ngIf="!PurchasesLoading && !showOffers">
+        <app-book-card-orders *ngFor="let purchase of purchases" [purchase]="purchase" (statusChanged)="statusChanged($event)"></app-book-card-orders>
     </div>
-    <p *ngIf="!ajaxLoading && data.length == 0" class="empty">You didn't make any order, yet 😉.</p>
+    <div *ngIf="!offersLoading && showOffers">
+        <app-book-card-offers *ngFor="let offer of offers" [offer]="offer"></app-book-card-offers>
+    </div>
+    <p *ngIf="!PurchasesLoading && purchases.length == 0 && !showOffers" class="empty">You didn't make any order, yet 😉.</p>
 </div>
