re-fixed the price not loading race condition

--- a/angular/src/app/modules/books/components/book-details/book-details.component.html
+++ b/angular/src/app/modules/books/components/book-details/book-details.component.html
@@ -17,7 +17,7 @@
                 </div>
             </div>
         </div>
-        <div class="bottom" *ngIf="book">
+        <div class="bottom" *ngIf="book && isOpen">
             <div class="action" *ngIf="isLoggedIn">
                 <app-offer-card [offer]="lastBid?.offer" (onBid)="onBid($event)"></app-offer-card>
             </div>
