--- a/angular/src/app/modules/profile/components/moderation/moderation.component.scss
+++ b/angular/src/app/modules/profile/components/moderation/moderation.component.scss
@@ -7,9 +7,27 @@
         margin: 20px;
     }
 
-    
-
-    
+    .stats{
+        display: flex;
+        justify-content: space-around;
+        margin: 20px;
+        div{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            padding: 10px;
+            border-radius: 5px;
+            background-color: rgb(144, 156, 235);;
+            box-shadow: 0 0 5px rgba(0,0,0,0.1);
+            h3{
+                margin: 0;
+            }
+            p{
+                margin: 0;
+            }
+        }
+    }
 }
 
 :host ::ng-deep .mat-mdc-tab-body-wrapper{
