book details is now responsive #5, book ban from book-details is now possible, chat has been hidden from mobile page

--- a/angular/src/app/modules/books/components/book-details/book-details.component.scss
+++ b/angular/src/app/modules/books/components/book-details/book-details.component.scss
@@ -108,7 +108,27 @@
 
                 }
             }
+
+
+            &.bottom-mod{
+                .moderate{
+                    display: flex;
+                    flex-direction: row;
+                    gap: 20px;
+
+                    .edit{
+                        background-color: rgb(144, 156, 235);
+                        color: white;
+                    }
+
+                    .ban{
+                        background-color: rgb(255, 0, 0);
+                        color: white;
+                    }
+                }
+            }
         }
+
 
     }
 
@@ -116,6 +136,47 @@
         height: 100%;
         display: flex;
         flex-direction: column;
-        //justify-content: space-between;
+    }
+}
+
+@media screen and (max-width: 1000px) {
+    .container {
+        flex-direction: column;
+
+        div.left {
+            width: 100%;
+            border-right: none;
+
+            .top {
+                height: auto;
+                flex-direction: column;
+
+                .image-container {
+                    max-width: 100% !important;
+                    img{
+                        max-width: 80%;
+                    }
+                }
+
+                .details-container {
+                    padding: 20px 0;
+                    text-align: center;
+                }
+            }
+
+            .bottom{
+                height: auto;
+                padding-top: 20px;
+                padding-bottom: 40px;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+            }
+        }
+
+        .chat-container {
+            display: none;
+        }
     }
 }
