--- a/angular/src/app/modules/books/components/book-details/book-details.component.html
+++ b/angular/src/app/modules/books/components/book-details/book-details.component.html
@@ -31,7 +31,10 @@
         </div>
         <div class="bottom bottom-mod" *ngIf="book && role === 'moderator' && !past">
             <h3>Moderate this book</h3>
-            TODO: implement edit book and delete book
+            <div class="moderate">
+                <button mat-raised-button class="edit" (click)="onEdit()">Edit <mat-icon>edit</mat-icon></button>
+                <button mat-raised-button class="ban" (click)="onBan()">Ban <mat-icon>delete</mat-icon></button>
+            </div>
         </div>
     </div>
     <div class="chat-container">
