first implementation of chats

--- a/angular/src/app/modules/books/components/book-details/book-details.component.scss
+++ b/angular/src/app/modules/books/components/book-details/book-details.component.scss
@@ -134,6 +134,7 @@
 
     .chat-container {
         height: 100%;
+        max-width: 30%;
         display: flex;
         flex-direction: column;
     }
