--- a/angular/src/app/modules/profile/components/account-auctions/account-auctions.component.html
+++ b/angular/src/app/modules/profile/components/account-auctions/account-auctions.component.html
@@ -1,5 +1,6 @@
 <div class="container">
     <p> TODO: new auction card</p>
+    <p> TODO: get ongoing auctions</p>
     <app-loader color="#909ceb" position="relative" *ngIf="ajaxLoading"></app-loader>
     <div *ngIf="!ajaxLoading">
         <app-book-card-auctions *ngFor="let auction of data" [purchase]="auction" (statusChanged)="statusChanged($event)"></app-book-card-auctions>
