--- a/angular/src/app/modules/books/components/book-details/book-details.component.html
+++ b/angular/src/app/modules/books/components/book-details/book-details.component.html
@@ -39,18 +39,7 @@
     </div>
     <div class="chat-container">
         <h1>Chat:</h1>
-        <p>
-            Messaggio dal venditore:
-            <span>Mi piacciono i piedi</span>
-        </p>
-        <p>
-            Messaggio dall'acquirente:
-            <span>Io ho i piedi</span>
-        </p>
-        <p>
-            Messaggio dal venditore:
-            <span>Perfetto, allora possiamo fare affari</span>
-        </p>
+        <p> {{ publicChatMessages | json }} </p>
         <!--app-chat [book]="book"></app-chat-->
     </div>
 </div>
