--- a/angular/src/app/modules/books/components/book-details/book-details.component.scss
+++ b/angular/src/app/modules/books/components/book-details/book-details.component.scss
@@ -110,18 +110,18 @@
             }
 
 
-            &.bottom-mod{
-                .moderate{
+            &.bottom-mod {
+                .moderate {
                     display: flex;
                     flex-direction: row;
                     gap: 20px;
 
-                    .edit{
+                    .edit {
                         background-color: rgb(144, 156, 235);
                         color: white;
                     }
 
-                    .ban{
+                    .ban {
                         background-color: rgb(255, 0, 0);
                         color: white;
                     }
@@ -132,52 +132,87 @@
 
     }
 
-    .chat-container {
-        height: 100%;
-        max-width: 30%;
-        display: flex;
-        flex-direction: column;
-    }
-}
+    .chat {
 
-@media screen and (max-width: 1000px) {
-    .container {
-        flex-direction: column;
+        width: 30%;
 
-        div.left {
-            width: 100%;
-            border-right: none;
+        .chat-container {
+            height: 65vh;
+            display: flex;
+            flex-direction: column;
+            overflow-y: scroll;
+            padding-left: 15px;
+            padding-right: 15px;
 
-            .top {
-                height: auto;
-                flex-direction: column;
-
-                .image-container {
-                    max-width: 100% !important;
-                    img{
-                        max-width: 80%;
-                    }
-                }
-
-                .details-container {
-                    padding: 20px 0;
-                    text-align: center;
-                }
+            app-message {
+                width: 80%;
             }
 
-            .bottom{
-                height: auto;
-                padding-top: 20px;
-                padding-bottom: 40px;
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                align-items: center;
+            app-message.mine {
+                align-self: flex-end;
             }
         }
 
-        .chat-container {
-            display: none;
+        .chat_form {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+            height: 10vh;
+            padding: 10px;
+
+            mat-form-field {
+                width: 80%;
+                height: 100% !important;
+            }
+
+            input {
+                height: 100% !important;
+                width: 80%;
+            }
+        }
+    }
+
+    @media screen and (max-width: 1000px) {
+        .container {
+            flex-direction: column;
+
+            div.left {
+                width: 100%;
+                border-right: none;
+
+                .top {
+                    height: auto;
+                    flex-direction: column;
+
+                    .image-container {
+                        max-width: 100% !important;
+
+                        img {
+                            max-width: 80%;
+                        }
+                    }
+
+                    .details-container {
+                        padding: 20px 0;
+                        text-align: center;
+                    }
+                }
+
+                .bottom {
+                    height: auto;
+                    padding-top: 20px;
+                    padding-bottom: 40px;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    align-items: center;
+                }
+            }
+
+            .chat-container {
+                display: none;
+            }
         }
     }
 }
