added loader, fixed #11

--- a/angular/src/app/modules/books/components/book-details/book-details.component.scss
+++ b/angular/src/app/modules/books/components/book-details/book-details.component.scss
@@ -135,6 +135,9 @@
     .chat {
 
         width: 30%;
+        h1{
+            margin-left: 20px;
+        }
 
         .chat-container {
             height: 65vh;
