--- a/angular/src/app/modules/books/components/book-details/book-details.component.html
+++ b/angular/src/app/modules/books/components/book-details/book-details.component.html
@@ -37,8 +37,9 @@
             </div>
         </div>
     </div>
-    <div class="chat">
-        <mat-tab-group>
+    <div class="chat" *ngIf="role === 'student'">
+        <app-loader *ngIf="!publicChat " color="#ff0000" position="relative"></app-loader> <!--TODO: change if or privateChat -->
+        <mat-tab-group *ngIf="publicChat"> <!--TODO: change if && privateChat-->
             <mat-tab label="Public chat">
                 <h1>Public chat:</h1>
                 <div class="chat-container" id="public-chat">
@@ -59,5 +60,8 @@
                 //todo form
             </mat-tab>
         </mat-tab-group>
+    </div>
+    <div class="chat">
+        <h1>Sorry, chat is not available for moderators.</h1>
     </div>
 </div>
