--- a/angular/src/app/modules/profile/components/profilepage/profilepage.component.scss
+++ b/angular/src/app/modules/profile/components/profilepage/profilepage.component.scss
@@ -27,6 +27,7 @@
             border-right: none;
             border-bottom: 1px solid #a0a0a0;
             margin-left: 0 !important;
+            max-height: 40%;
             app-profile-menu{
                 width: 100%;
                 padding: 10px;
