--- a/angular/src/app/modules/books/components/book-details/book-details.component.html
+++ b/angular/src/app/modules/books/components/book-details/book-details.component.html
@@ -38,12 +38,15 @@
         </div>
     </div>
     <div class="chat" *ngIf="role === 'student'">
-        <app-loader *ngIf="!publicChat " color="#ff0000" position="relative"></app-loader> <!--TODO: change if or privateChat -->
+        <app-loader *ngIf="!publicChat " color="#ff0000" position="relative"></app-loader>
+        <!--TODO: change if or privateChat -->
         <mat-tab-group *ngIf="publicChat"> <!--TODO: change if && privateChat-->
             <mat-tab label="Public chat">
                 <h1>Public chat:</h1>
                 <div class="chat-container" id="public-chat">
-                    <app-message *ngFor="let message of publicChatMessages" [message]="message" [isOwner]="message.sender === book.owner" [isMe]="message.sender === user_uid" [ngClass]="{'mine': message.sender === user_uid}"></app-message>
+                    <app-message *ngFor="let message of publicChatMessages" [message]="message"
+                        [isOwner]="message.sender === book.owner" [isMe]="message.sender === user_uid"
+                        [ngClass]="{'mine': message.sender === user_uid}"></app-message>
                 </div>
                 <form class="chat_form" [formGroup]="publicChatForm" (ngSubmit)="onPublicChatSubmit()">
                     <mat-form-field>
@@ -55,13 +58,27 @@
             <mat-tab label="Private chat">
                 <h1>Private chat:</h1>
                 <div class="chat-container">
-                    <app-message *ngFor="let message of privateChatMessages" [message]="message" [isOwner]="message.sender === book.owner"></app-message>
+                    <mat-accordion>
+                        <mat-expansion-panel *ngFor="let n of privateChats">
+                            <mat-expansion-panel-header>
+                                <mat-panel-title>
+                                    Chat {{n | json}}
+                                </mat-panel-title>
+                                <mat-panel-description>
+                                </mat-panel-description>
+                            </mat-expansion-panel-header>
+                            <app-message *ngFor="let message of privateChatMessages" [message]="message"
+                        [isOwner]="message.sender === book.owner"></app-message>
+                        </mat-expansion-panel>
+                    </mat-accordion>
+
+                    
                 </div>
                 //todo form
             </mat-tab>
         </mat-tab-group>
     </div>
-    <div class="chat">
+    <div class="chat" *ngIf="role === 'moderator'">
         <h1>Sorry, chat is not available for moderators.</h1>
     </div>
 </div>
