--- a/angular/src/app/modules/books/components/book-details/book-details.component.html
+++ b/angular/src/app/modules/books/components/book-details/book-details.component.html
@@ -58,13 +58,16 @@
             <mat-tab label="Private chat">
                 <h1>Private chat:</h1>
                 <div class="chat-container">
-                    <mat-accordion>
-                        <mat-expansion-panel *ngFor="let n of privateChats">
+                    <mat-accordion *ngFor="let item of privateChats | keyvalue">
+                        <mat-expansion-panel>
                             <mat-expansion-panel-header>
                                 <mat-panel-title>
-                                    Chat {{n | json}}
+                                    Chat {{item.key}}
                                 </mat-panel-title>
                                 <mat-panel-description>
+                                    <app-message *ngFor="let message of item.value.messages" [message]="message"
+                                    [isOwner]="message.sender === book.owner" [isMe]="message.sender === user_uid"
+                                    [ngClass]="{'mine': message.sender === user_uid}"></app-message>
                                 </mat-panel-description>
                             </mat-expansion-panel-header>
                             <app-message *ngFor="let message of privateChatMessages" [message]="message"
